--- a/src/main/webapp/views/manage-product-update.html
+++ b/src/main/webapp/views/manage-product-update.html
@@ -5,8 +5,9 @@
     <div class="panel-body">
         <div class="form-group">
             <label class="control-label">类别</label>
-            <select ng-model="addproduct.category" ng-options="category.name for category in categorys"
-                    class="form-control"></select>
+            <select ng-model="addproduct.category" ng-options="category.name for category in categorys" class="form-control">
+                <option value="">{{updateproduct.category.name}}</option>
+            </select>
         </div>
         <div class="form-group">
             <label class="control-label">名称</label>
